# BoardGameGeek-Data-Extractor

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  tox.ini  tree.txt
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  publish.yml
cfg/: local.yml
data_test/users/: Zelbinian.parquet
debug/: debug_bgg.py  debug_client_class.py  debug_urllib.py
docs/: api_reference.md  examples.md  index.md  modules.md  user_guide.md
docs/internal/: future_scope.md  project_walkthrough.md
notebooks/: demo.ipynb  games.csv  games.json  games_batched.jsonl  large_games.csv  search_results.json
src/bgg_extractor/: __init__.py  cli.py  client.py  client_demo.py  persistence.py  schemas.py  transform.py  writer.py
src/bgg_extractor/storage/: base.py  local.py  s3.py  utils.py
tests/: conftest.py  test_client.py  test_integration.py  test_literal_validation.py  test_local_storage.py  test_persistence.py  test_s3_storage.py  test_schemas.py  test_search_schema.py  test_sync_client.py  test_transform.py
